--- a/01_start.html
+++ b/01_start.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- ko는 한국 사이트임을 표기 -->
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NAVER</title>
+
+    <!-- 파비콘(favicon) 적용 -->
+     <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
 </head>
 <body>
-    
+    Hello world!!
+    <H1>Hello world!!</H1>
 </body>
 </html>
