--- a/04_a태그.html
+++ b/04_a태그.html
@@ -20,6 +20,16 @@
     <!-- 외부 사이트로 이동하려면 프로토콜까지 입력 -->
     <!-- target="_blank" 속성을추가하면 새 탭으로 열림 -->
     <a href="https://www.naver.com" target="_blank">네이버</a>
+
+
+    <!-- 이미지 클릭시 페이지 이동 -->
+    <a href="https://siape.veta.naver.com/fxclick?eu=EU10043565&calp=-&oj=cQgn6aire5Oakg5s0423rUbRKwniSnygcmdsHLw57ZUhFMuWqAdtehe%2BHymF5FiwJL1qM2Pf%2FalcT6ZHvJy27EtdG0AGMkjqm0wigL%2Bsx81sf4XBtOeMJ%2BMngDAE0ibU93IalGY18jjIBWexIpibH0plqdgUSG%2BUXrQSw%2B%2FX1bbNCF9%2F110BZDp0hCNKO%2BcHo2M9jEOAPSLbaIdXv9YIFqKzdZWOwZvbTlyx%2BI1QQfbGQ%2BJfZveGsuXNNd3e%2BJI1Lx%2BDLhsxSYhKyy6dTse9VQzPkpM%2FUloKGZnTZKRRDBwJ0V2oMkZf2hm0wXMvGcAK2%2BoWEOPw4uYeZQ65azhgrZiGWTUV%2Fe8L&ac=9064934&src=7408114&br=4655889&evtcd=P901&x_ti=1504&tb=&oid=&sid1=&sid2=&rk=UX-6BSe6PMyEqxGoapmi5g&eltts=90pjnN0SIxf5ZlcHphUrYA%3D%3D&brs=Y&"
+    target="_blank">
+        <!-- 코드라인 이동 (Alt + 방향키) -->
+        <img src="https://ssl.pstatic.net/melona/libs/1518/1518375/f158b8d845bff74d1c7e_20241219155359835_1.jpg" 
+    alt="" width="600">
+    </a>
+    
     
 </body>
 </html>
